--- a/index.htm
+++ b/index.htm
@@ -85,25 +85,25 @@ me, ama imparare e costruire.</font></p>
 adattato e migliorato.<br>
 Questo spazio è pensato per aiutare chi condivide la mia stessa passione, l'elettronica,
 fai-da-te e fotografia!.</font></p>
-<blink>
-
 <i><b>
 
 <p align="center"><font face="Arial">Il materiale può essere usato liberamente per scopi
 personali o didattici, <br>
-ma non può essere redistribuito o ripubblicato altrove<span lang="it">.<br>
-</span></font></b></i><font face="Arial"><i><b><br>
-Copyright © toor10 2025<span lang="it">-2026</span><br>
-Tutti i diritti sono riservati.</b></i></font></p>
+ma non può essere redistribuito o ripubblicato altrove.</font></b></i></p>
+
+<p align="center"><font face="Arial"><i><b>Copyright © toor10 2025<span lang="it">-2026</span><br>
+Tutti i diritti sono riservati.</b></i> </font></p>
+
+<blink>
+
 <p align="center"><font face="Arial"><em><strong>ultimo aggiornamento: 
 <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%B %Y" startspan -->gennaio 2026<!--webbot bot="Timestamp" i-checksum="18515" endspan --></strong></em> </font></p>
-<p align="center">&nbsp;</p>
-<!-- Inizio Codice ShinyStat -->
+<center><!-- Inizio Codice ShinyStat -->
 <script src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=SS-49454459-c931a"></script>
 <noscript>
 <a href="https://www.shinystat.com/it/" target="_top">
 <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=SS-49454459-c931a" alt="Statistiche web" style="border:0px" /></a>
 </noscript>
-<!-- Fine Codice ShinyStat -->
+<!-- Fine Codice ShinyStat --></center>
 <p align="center">&nbsp;<img src="altro/images/frontpag.gif" border="0" WIDTH="88" HEIGHT="31"><img border="0" src="img/made_with_windows.gif" width="88" height="31"><img border="0" src="img/imaginate.gif" width="88" height="31"><img border="0" src="img/bestviewed.gif" width="88" height="31"><img border="0" src="img/best_viewed_with_eyes.gif" width="88" height="31"><img border="0" src="img/eyes.gif" width="88" height="31"><img border="0" src="img/cookie.gif" width="88" height="31"><img border="0" src="img/bookmark_this_page.gif" width="88" height="31"></blink><!--mstheme--></font><!--msnavigation--></td></tr><!--msnavigation--></table></body>
 </html>
