--- a/siti_cons.htm
+++ b/siti_cons.htm
@@ -199,6 +199,13 @@ non affiliati. Sono consigliati liberamente per utilità personale, come li uso 
 	archivio di programmi in Visual Basic.</font><!--mstheme--></font></td>
   </tr>
 	<tr>
+    <td class="tg-aa53" align="center" width="253"><!--mstheme--><font face="Garamond, Times New Roman, Times"><i>
+	<a href="http://maurorossi.net/"><font face="Arial">http://maurorossi.net/</font></a></i><!--mstheme--></font></td>
+    <td class="tg-aa53" align="center" width="472"><!--mstheme--><font face="Garamond, Times New Roman, Times"><font face="Arial">
+	<span lang="it">Altro</span> 
+	archivio di programmi in Visual Basic.</font><!--mstheme--></font></td>
+    </tr>
+	<tr>
     <td class="tg-aa53" align="center" width="253"><!--mstheme--><font face="Garamond, Times New Roman, Times">&nbsp;<!--mstheme--></font></td>
     <td class="tg-aa53" align="center" width="472"><!--mstheme--><font face="Garamond, Times New Roman, Times">&nbsp;<!--mstheme--></font></td>
     </tr>
