--- a/404.html
+++ b/404.html
@@ -44,13 +44,13 @@ if(MSFPhover) { MSFPnav8n=MSFPpreload("altro/_derived/map_sito.htm_cmp_downtown1
 
 <!--mstheme--></font></td><td valign="top" width="24"></td><!--msnavigation--><td valign="top"><!--mstheme--><font face="Garamond, Times New Roman, Times">
 <p align="center"><font face="Arial"><em><strong><big><big><big>Il file richiesto o
-directory non è stata trovata!</big></big></big></strong></em></font></p>
+directory non Ã¨ stata trovata!</big></big></big></strong></em></font></p>
 
 <ol>
-  <li><p align="center"><font face="Arial">La pagina o directory è stata spostata o
+  <li><p align="center"><font face="Arial">La pagina o directory Ã¨ stata spostata o
     rinominata.</font></p>
   </li>
-  <li><p align="center"><font face="Arial">La pagina o directory è temporaneamente non
+  <li><p align="center"><font face="Arial">La pagina o directory Ã¨ temporaneamente non
     disponibile.</font></p>
   </li>
 </ol>
@@ -68,11 +68,11 @@ Sito.</font></p>
 <a href="index.htm">** TORNA ALLA HOME **</a></font></p>
 <i><b>
 
-<p align="center"><font face="Arial">Il materiale può essere usato liberamente per scopi
+<p align="center"><font face="Arial">Il materiale puÃ² essere usato liberamente per scopi
 personali o didattici, <br>
-ma non può essere redistribuito o ripubblicato altrove.</font></b></i></p>
+ma non puÃ² essere redistribuito o ripubblicato altrove.</font></b></i></p>
 
-<p align="center"><font face="Arial"><i><b>Copyright © toor10 2025<span lang="it">-2026</span><br>
+<p align="center"><font face="Arial"><i><b>Copyright Â© toor10 2025<span lang="it">-2026</span><br>
 Tutti i diritti sono riservati.</b></i> </font></p>
 
 <blink>
