--- a/404.html
+++ b/404.html
@@ -62,8 +62,7 @@ Sito.</font></p>
 <p align="center">
 <img border="0" src="altro/Loading-Cat-HD-meme-5.jpg" width="285" height="245"><font face="Arial"><span lang="it">
 </span></font>
-<img width="399" height="234" src="file:///C:/Users/utente/Desktop/Progetti/SitoV1_Frontpage/Sito_PrimaVers/toor10/404_files/image001.gif" alt="Cloud Callout: LA TUA FACCIA IN QUESTO MOMENTO
-" v:shapes="_x0000_s1025"><font face="Arial"><br>
+<img width="399" height="234" src="404_files/image001.gif" alt="LA TUA FACCIA IN QUESTO MOMENTO" v:shapes="_x0000_s1025"><font face="Arial"><br>
 <br>
 <a href="index.htm">** TORNA ALLA HOME **</a></font></p>
 <i><b>
