--- a/download.htm
+++ b/download.htm
@@ -8,7 +8,7 @@
 </style>
 <meta name="Microsoft Theme" content="downtown 0111, default">
 <meta name="Microsoft Border" content="tl, default">
-</head>
+</head> 
 
 <body background="_themes/downtown/wertilea.jpg" bgcolor="#3366CC" text="#FFFF99" link="#FFCC00" vlink="#99CCCC" alink="#66FF00"><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Garamond, Times New Roman, Times">
 <p align="center"><font size="6"><strong>
@@ -73,11 +73,11 @@ usare e facilmente adattabile.</font></p>
 </blockquote>
 <i><b>
 
-<p align="center"><font face="Arial">Il materiale può essere usato liberamente per scopi
+<p align="center"><font face="Arial">Il materiale puÃ² essere usato liberamente per scopi
 personali o didattici, <br>
-ma non può essere redistribuito o ripubblicato altrove.</font></b></i></p>
+ma non puÃ² essere redistribuito o ripubblicato altrove.</font></b></i></p>
 
-<p align="center"><font face="Arial"><i><b>Copyright © toor10 2025<span lang="it">-2026</span><br>
+<p align="center"><font face="Arial"><i><b>Copyright Â© toor10 2025<span lang="it">-2026</span><br>
 Tutti i diritti sono riservati.</b></i> </font></p>
 
 <blink>
