Update vb.htm to UTF-8

--- a/progetti/vb.htm
+++ b/progetti/vb.htm
@@ -7,7 +7,7 @@
 <meta name="Microsoft Theme" content="downtown 0111, default">
 <meta name="Microsoft Border" content="tl, default">
 </head>
-
+ 
 <body background="../_themes/downtown/wertilea.jpg" bgcolor="#3366CC" text="#FFFF99" link="#FFCC00" vlink="#99CCCC" alink="#66FF00"><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Garamond, Times New Roman, Times">
 <p align="center"><font size="6"><strong>
 <img src="_derived/vb.htm_cmp_downtown110_bnr.gif" width="600" height="60" border="0" alt="Visual Basic"></strong></font><br>
@@ -57,14 +57,14 @@ programmazione ad eventi.</font><b><i></p>
     <!--mstheme--></font><!--msthemelist--></td></tr>
 	<!--msthemelist--><tr><td valign="baseline" width="42"><img src="../_themes/downtown/werbul1a.gif" width="20" height="20" hspace="11" alt="bullet"></td><td valign="top" width="100%"><!--mstheme--><font face="Garamond, Times New Roman, Times"><p align="left"><font face="Arial">esempi di form, controlli e gestione eventi</font></p>
     <!--mstheme--></font><!--msthemelist--></td></tr>
-	<!--msthemelist--><tr><td valign="baseline" width="42"><img src="../_themes/downtown/werbul1a.gif" width="20" height="20" hspace="11" alt="bullet"></td><td valign="top" width="100%"><!--mstheme--><font face="Garamond, Times New Roman, Times"><p align="left"><font face="Arial">applicazioni per l&#146;automazione di attività su
+	<!--msthemelist--><tr><td valign="baseline" width="42"><img src="../_themes/downtown/werbul1a.gif" width="20" height="20" hspace="11" alt="bullet"></td><td valign="top" width="100%"><!--mstheme--><font face="Garamond, Times New Roman, Times"><p align="left"><font face="Arial">applicazioni per l&#146;automazione di attivitÃ  su
       PC</font></p>
     <!--mstheme--></font><!--msthemelist--></td></tr>
 	<!--msthemelist--><tr><td valign="baseline" width="42"><img src="../_themes/downtown/werbul1a.gif" width="20" height="20" hspace="11" alt="bullet"></td><td valign="top" width="100%"><!--mstheme--><font face="Garamond, Times New Roman, Times"><p align="left"><font face="Arial">progetti replicabili e modificabili anche da chi
       inizia</font></p>
     <!--mstheme--></font><!--msthemelist--></td></tr>
 	<!--msthemelist--></table><!--mstheme--><font face="Garamond, Times New Roman, Times">
-  <p align="center"><font face="Arial">Ogni progetto è accompagnato da esempi pratici per
+  <p align="center"><font face="Arial">Ogni progetto Ã¨ accompagnato da esempi pratici per
   facilitare l&#146;apprendimento e la personalizzazione.</font></p>
 	<p align="center"><em><strong><u>
 	<font face="Arial" style="font-size: larger">
@@ -73,11 +73,11 @@ programmazione ad eventi.</font><b><i></p>
 
 <i><b>
 
-<p align="center"><font face="Arial">Il materiale può essere usato liberamente per scopi
+<p align="center"><font face="Arial">Il materiale puÃ² essere usato liberamente per scopi
 personali o didattici, <br>
-ma non può essere redistribuito o ripubblicato altrove.</font></b></i></p>
+ma non puÃ² essere redistribuito o ripubblicato altrove.</font></b></i></p>
 
-<p align="center"><font face="Arial"><i><b>Copyright © toor10 2025<span lang="it">-2026</span><br>
+<p align="center"><font face="Arial"><i><b>Copyright Â© toor10 2025<span lang="it">-2026</span><br>
 Tutti i diritti sono riservati.</b></i> </font></p>
 
 <blink>
