Update python.htm to UTF-8

--- a/progetti/python.htm
+++ b/progetti/python.htm
@@ -50,7 +50,7 @@ if(MSFPhover) { MSFPnav8n=MSFPpreload("../altro/_derived/map_sito.htm_cmp_downto
 	<font size="4">In questa sezione trovi script e piccoli progetti realizzati 
 	in Python, <br>
 	</font>usato come strumento pratico per automatizzare, analizzare e 
-	semplificare diverse attività.</font></p>
+	semplificare diverse attivitÃ .</font></p>
 	<p data-start="322" data-end="339"><font face="Arial" size="4">Contenuti 
 	tipici:</font></p>
 	<!--mstheme--></font><!--msthemelist--><table data-start="340" data-end="544" border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -77,11 +77,11 @@ if(MSFPhover) { MSFPnav8n=MSFPpreload("../altro/_derived/map_sito.htm_cmp_downto
 
 <i><b>
 
-<p align="center"><font face="Arial">Il materiale può essere usato liberamente per scopi
+<p align="center"><font face="Arial">Il materiale puÃ² essere usato liberamente per scopi
 personali o didattici, <br>
-ma non può essere redistribuito o ripubblicato altrove.</font></b></i></p>
+ma non puÃ² essere redistribuito o ripubblicato altrove.</font></b></i></p>
 
-<p align="center"><font face="Arial"><i><b>Copyright © toor10 2025<span lang="it">-2026</span><br>
+<p align="center"><font face="Arial"><i><b>Copyright Â© toor10 2025<span lang="it">-2026</span><br>
 Tutti i diritti sono riservati.</b></i> </font></p>
 
 <blink>
