Update genera_augtv.htm to UTF-8

--- a/progetti/arduino/augtv/genera_augtv.htm
+++ b/progetti/arduino/augtv/genera_augtv.htm
@@ -58,7 +58,7 @@ if(MSFPhover) { MSFPnav8n=MSFPpreload("../../../altro/_derived/map_sito.htm_cmp_
 </font>
 
 </p>
-<p align="center"><font face="Arial"><span lang="it">Età: </span>&nbsp;<input id="eta" placeholder="30">
+<p align="center"><font face="Arial"><span lang="it">EtÃ : </span>&nbsp;<input id="eta" placeholder="30">
 
 </font>
 
@@ -209,11 +209,11 @@ void drawCake(int cx, int y) {
 <!--msthemeseparator--><p align="center"><img src="../../../_themes/downtown/werhsepa.gif" width="300" height="10" alt="horizontal rule"></p>
 <i><b>
 
-<p align="center"><font face="Arial">Il materiale può essere usato liberamente per scopi
+<p align="center"><font face="Arial">Il materiale puÃ² essere usato liberamente per scopi
 personali o didattici, <br>
-ma non può essere redistribuito o ripubblicato altrove.</font></b></i></p>
+ma non puÃ² essere redistribuito o ripubblicato altrove.</font></b></i></p>
 
-<p align="center"><font face="Arial"><i><b>Copyright © toor10 2025<span lang="it">-2026</span><br>
+<p align="center"><font face="Arial"><i><b>Copyright Â© toor10 2025<span lang="it">-2026</span><br>
 Tutti i diritti sono riservati.</b></i> </font></p>
 
 <blink>
