Update under_cons.htm to UTF-8

--- a/altro/under_cons.htm
+++ b/altro/under_cons.htm
@@ -5,7 +5,7 @@
 <meta name="Microsoft Theme" content="downtown 0111, default">
 <meta name="Microsoft Border" content="tl, default">
 </head>
-
+ 
 <body background="../_themes/downtown/wertilea.jpg" bgcolor="#3366CC" text="#FFFF99" link="#FFCC00" vlink="#99CCCC" alink="#66FF00"><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td><!--mstheme--><font face="Garamond, Times New Roman, Times">
 <p align="center"><font size="6"><strong>
 <img src="_derived/under_cons.htm_cmp_downtown110_bnr.gif" width="600" height="60" border="0" alt="In Costruzione!"></strong></font><br>
@@ -53,11 +53,11 @@ if(MSFPhover) { MSFPnav8n=MSFPpreload("_derived/map_sito.htm_cmp_downtown110_hbt
 
 <i><b>
 
-<p align="center"><font face="Arial">Il materiale può essere usato liberamente per scopi
+<p align="center"><font face="Arial">Il materiale puÃ² essere usato liberamente per scopi
 personali o didattici, <br>
-ma non può essere redistribuito o ripubblicato altrove.</font></b></i></p>
+ma non puÃ² essere redistribuito o ripubblicato altrove.</font></b></i></p>
 
-<p align="center"><font face="Arial"><i><b>Copyright © toor10 2025<span lang="it">-2026</span><br>
+<p align="center"><font face="Arial"><i><b>Copyright Â© toor10 2025<span lang="it">-2026</span><br>
 Tutti i diritti sono riservati.</b></i> </font></p>
 
 <blink>
